--- a/html/mijncv.html
+++ b/html/mijncv.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/index.html"><strong>Home</strong></a></li>
                 <li><a href="mijncv.html">Mijncv</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
