--- a/html/contact.html
+++ b/html/contact.html
@@ -2,10 +2,10 @@
 <html lang="nl-NL">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <!-- Voeg hier je eigen stylesheet toe -->
 </head>
 
@@ -24,11 +24,11 @@
         <div>
             <form id="persoonlijkegegevens" action="https://formspree.io/f/mjvqpnoj" method="POST">
                 <label for="voornaam">Voornaam:</label>
-                <input id="voornaam" type="text" placeholder="Uw voornaam" name="voornaam"><br><br>
+                <input id="voornaam" type="text" placeholder="Uw voornaam" name="voornaam" /><br /><br />
                 <label for="achternaam">Achternaam:</label>
-                <input id="achternaam" type="text" placeholder="Uw achternaam" name="achternaam"><br><br>
+                <input id="achternaam" type="text" placeholder="Uw achternaam" name="achternaam" /><br /><br />
                 <label for="e-mail">E-mail</label>
-                <input id="e-mail" type="email" placeholder="Uw e-mailadres" name="e-mail"><br><br>
+                <input id="e-mail" type="email" placeholder="Uw e-mailadres" name="e-mail" /><br /><br />
                 <label for="contactgegevens">Bericht:</label>
                 <textarea id="contactgegevens" placeholder="Voer hier uw bericht in"></textarea>
 
