--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             </p>
         </div>
         <div>
-            <img src="img/-5764657748838037658_121.jpg" alt="Yentl" width="300" height="400" id="Yentl" />
+            <img src="img/-5764657748838037658_121.jpg" alt="Yentl" width="300" height="400" id="Yentl">
         </div>
 
         <!-- Voeg meer secties en inhoud toe zoals nodig -->
     </main>
 
     <footer>
-        <p>&copy;2023 Cursus Webdesign</p>
+        <p>&copy;2023 Cursus Webdewsign</p>
     </footer>
 </body>
 
