--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy;2023 Cursus Webdewsign</p>
+        <p>&copy;2023 Cursus Webdesign</p>
     </footer>
 </body>
 
