--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="https://yentlr2005.github.io/Huiswerk-les-15/index.html/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://yentlr2005.github.io/Huiswerk-les-15/css/main.css">
     <!-- Voeg hier je eigen stylesheet toe -->
 </head>
 
