--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="https://yentlr2005.github.io/Huiswerk-les-15/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <!-- Voeg hier je eigen stylesheet toe -->
 </head>
 
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="html/mijncv.html">Mijncv</a></li>
-                <li><a href="html/contact.html">Contact</a></li>
+                <li><a href="mijncv.html">Mijncv</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
